Change in text size and layout width of refresh button and share button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,14 +35,16 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5pt"
                 android:text="@string/refresh"
-                android:textSize="20sp" />
+                android:textSize="15sp"
+                tools:ignore="ButtonStyle" />
             <Button
                 android:id="@+id/shareButton"
                 android:layout_width="60pt"
                 android:layout_height="wrap_content"
                 android:layout_margin="5pt"
                 android:text="@string/share"
-                android:textSize="20sp" />
+                android:textSize="15sp"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
